tests/baselines/reference/narrowedConstInMethod.errors.txt
tests/cases/compiler/narrowedConstInMethod.ts(6,28): error TS2531: Object is possibly 'null'.
tests/cases/compiler/narrowedConstInMethod.ts(15,28): error TS2531: Object is possibly 'null'.


==== tests/cases/compiler/narrowedConstInMethod.ts (2 errors) ====
    
    function f() {
        const x: string | null = <any>{};
        if (x !== null) {
            return {
                bar() { return x.length; }  // Error: possibly null x
                               ~
!!! error TS2531: Object is possibly 'null'.
            };
        }
    }
    
    function f2() {
        const x: string | null = <any>{};
        if (x !== null) {
            return class {
                bar() { return x.length; }  // Error: possibly null x
                               ~
!!! error TS2531: Object is possibly 'null'.
            };
        }
    }